sullyedek a hajoval de legalabb van design

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+body {
+    background-color: lightyellow;
+}
+
 td {
+    background-color: white;
     border: 1px solid black;
+    border-radius: 2.5px;
     width: 50px;
     height: 50px;
     text-align: center;
@@ -28,4 +34,13 @@ table {
 input {
     display: block;
     margin: 10px auto;
+}
+
+div {
+    width: 80%;
+    margin: 20px auto;
+    padding: 30px;
+    background-color: white;
+    border-radius: 5px;
+    border: 5px brown double;
 }
